Fixed items layout issues

--- a/css/best-seller.css
+++ b/css/best-seller.css
@@ -1,11 +1,10 @@
 .header{
     position: relative;
-    left: 45%;
-    font-size: 30px;
-  }
-
-  .row{
-    padding-left: 10px; 
+    font-size: 3vw;
+    font-weight: bold;
+    text-align: center;
+    margin: 0 auto;
+    width: 100%;
   }
 
   .row img{
@@ -18,3 +17,33 @@
   .row img:hover {
     transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
   }
+
+.best-seller{
+  text-align: center;
+}
+tr{
+  display: flex;
+  justify-content: flex-start;
+}
+
+td{
+  display: flex;
+  width: 20%;
+  justify-content: center;
+  float: left;
+}
+
+hr{
+  border-top: 5px solid black;
+}
+
+body{
+  background-color: #8A4E41;
+  color: #f5f5f5;
+}
+
+a{
+  text-decoration: none;
+  color: #f5f5f5;
+  font-weight: bold;
+}
